--- a/kuznia/kuznia.csproj
+++ b/kuznia/kuznia.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Language.TextAnalytics" Version="2.8.0-preview" />
     <PackageReference Include="Microsoft.ML" Version="0.7.0" />
   </ItemGroup>
 
